export const snapshot = {};

snapshot[`Project Update List Command - Help Text 1`] = `
stdout:
"
Usage: list <projectId>

Description:

  List status updates for a project

Options:

  -h, --help           - Show this help.                                        
  --json               - Output as JSON                                         
  --limit     <limit>  - Limit results                             (Default: \\x1b[33m10\\x1b[39m)
  --no-pager           - Disable automatic paging for long output               

Examples:

  List project updates as JSON linear project-update list project-slug --json

"
stderr:
""
`;

snapshot[`Project Update List Command - JSON Missing Project Reference 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "unknown_error",
    "message": "Missing argument(s): projectId",
    "suggestion": null,
    "context": "Failed to fetch project updates"
  }
}
'
stderr:
""
`;

snapshot[`Project Update List Command - JSON Output 1`] = `
stdout:
'{
  "project": {
    "id": "project-1",
    "name": "Agent Complete Surface",
    "slugId": "agent-complete"
  },
  "updates": [
    {
      "id": "update-1",
      "body": "Shipped capabilities schema metadata.",
      "health": "onTrack",
      "url": "https://linear.app/test/project-update/update-1",
      "createdAt": "2026-03-30T03:00:00Z",
      "author": {
        "name": "yuya",
        "displayName": "Yuya Kakui"
      }
    }
  ]
}
'
stderr:
""
`;

snapshot[`Project Update List Command - JSON Project Not Found 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "not_found",
    "message": "Project not found: missing-project",
    "suggestion": null,
    "context": "Failed to fetch project updates"
  }
}
'
stderr:
""
`;
